Port IN and GET in full: three forms of one and four branches of the other
The earlier change made `in obj 'absent` answer none and `get none` answer
none, which was the half that MAKE-PORT* needed. Rebol's specifications are
wider than that, and the rest is here.

IN has three forms, and the C tells them apart by which argument is a block:

  in <object> <word>    the word bound to the object, or none
  in <object> <block>   the block bound to the object, and the block
  in <block>  <word>    the first object in the block that holds the word

The middle one the C calls "Special form: IN object block". It binds the
caller's own block where it stands and answers that block, thus the caller's
block is bound afterwards -- `b: [a]  in o b  do b` reads the field. Binder
gains bindInPlace for it, because Binder.bind copies, and copying is right
everywhere else: binding a body the caller still holds would change code the
caller wrote.

An error and a port answer IN as an object does, because each is a context
underneath. The C reads
`frame = IS_ERROR(val) ? VAL_ERR_OBJECT(val) : VAL_OBJ_FRAME(val)` and its
comment on the argument says "object, error, port, block".

GET has four branches. A word is looked up. A path is evaluated. An object
answers a block of its values, without SELF. And anything else answers
itself, which is one line: `else val = word;`.

That last branch is the general rule and `get none` was one case of it.
Writing only the none case left `get 5` refusing a number for no reason a
caller could see.

Suite: 500 failing, now 495. object-test drops 3 and protect-test drops 2,
which makes this the first work today that moved that number -- the earlier
30 functions are not tested by any file in the imported suite.